# iris-wallet-desktop

./: .bumpversion.cfg  .codespellrc  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  accessible_constant.py  build_appimage.sh  build_linux.sh  build_macos.sh  build_script.py  compose.yaml  docker-entrypoint.sh  iris_wallet_desktop.spec  pyproject.toml  pytest.ini  regtest.sh  run_e2e_tests.sh  windows_iriswallet.iss
.github/: release.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: clone-rln.yml  iris-wallet-desktop.yml
doc/: e2e_test.md
docs/: e2e_test.md
e2e_tests/: README.md  __init__.py  conftest.py  e2e_runner.py  pytest.ini  regtest.sh
e2e_tests/test/: __init__.py
src/: __init__.py  flavour.py  main.py  resources.qrc  version.py
src/model/: __init__.py  btc_model.py  channels_model.py  common_operation_model.py  help_card_content_model.py  invoices_model.py  node_info_model.py  payments_model.py  peers_model.py  rgb_faucet_model.py  rgb_model.py  selection_page_model.py  set_wallet_password_model.py  setting_model.py  success_model.py  transaction_detail_page_model.py
src/translations/: en_IN.qm  en_IN.ts  fr_FR.qm  fr_FR.ts
src/utils/: __init__.py  bootstrap.py  build_app_path.py  cache.py  clickable_frame.py  common_utils.py  constant.py  custom_context.py  custom_exception.py  endpoints.py  error_mapping.py  error_message.py  excluded_page.py  gauth.py  gdrive_operation.py  generate_config.py  generate_iss.py  global_toast.py  handle_exception.py  helpers.py  info_message.py  keyring_storage.py  ln_node_manage.py  local_store.py  logging.py  native_windows_auth.py  node_url_validator.py  page_navigation.py  page_navigation_events.py  render_timer.py  request.py  reset_app.py  worker.py
src/viewmodels/: __init__.py  backup_view_model.py  bitcoin_view_model.py  channel_management_viewmodel.py  enter_password_view_model.py  faucets_view_model.py  fee_rate_view_model.py  header_frame_view_model.py  issue_rgb20_view_model.py  issue_rgb25_view_model.py  ln_endpoint_view_model.py  ln_offchain_view_model.py  main_asset_view_model.py  main_view_model.py  receive_bitcoin_view_model.py  receive_rgb25_view_model.py  restore_view_model.py  rgb_25_view_model.py  send_bitcoin_view_model.py  set_wallet_password_view_model.py  setting_view_model.py  splash_view_model.py  term_view_model.py  view_unspent_view_model.py  wallet_and_transfer_selection_viewmodel.py  welcome_view_model.py
src/views/: __init__.py  main_window.py  ui_about.py  ui_backup.py  ui_backup_configure_dialog.py  ui_bitcoin.py  ui_bitcoin_transaction.py  ui_channel_detail_dialog.py  ui_channel_management.py  ui_close_channel_dialog.py  ui_collectible_asset.py  (+28 more)
unit_tests/: __init__.py
(+320 files in other folders)
